# pytbl

./: README.rst  pyproject.toml
docs/: conf.py  index.rst  modules.rst  pytbl.rst
pytbl/: __init__.py
